unpackaged/main/default/objects/Status_Based_Locks__mdt/Status_Based_Locks__mdt.object-meta.xml
<CustomObject>
    <label>Status Based Locks setting</label>
    <pluralLabel>Status Based Locks settings</pluralLabel>
</CustomObject>