unpackaged/main/default/objects/Status_Based_Locks__mdt/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <type>TextArea</type>
</CustomField>