unpackaged/main/default/objects/Status_Based_Locks__mdt/fields/Statuses_for_time_locks__c.field-meta.xml
<CustomField>
    <fullName>Statuses_for_time_locks__c</fullName>
    <label>Statuses for time locks</label>
    <type>TextArea</type>
</CustomField>